# joyfl-wip

./: .gitignore  README.rst  joyfl.py  pyproject.toml
.cursor/: worktrees.json
.github/workflows/: python-build.yml  python-release.yml
examples/: iteration.joy  recursion.joy
libs/: _cmd.py  _os.py  _text.py  _txt.py  stdlib.joy  test.joy
spec/: abs.joy  add.joy  and.joy  branch.joy  differ_q.joy  dip.joy  div.joy  dup.joy  equal_q.joy  filter.joy  foldl.joy  gt.joy  gte.joy  i.joy  id.joy  ifte.joy  linrec.joy  loop.joy  lt.joy  lte.joy  map.joy  max.joy  min.joy  mul.joy  neg.joy  not.joy  or.joy  over.joy  pop.joy  popd.joy  rem.joy  rolldown.joy  rollup.joy  sign.joy  split.joy  stack-size.joy  stack.joy  step.joy  sub.joy  swap.joy  (+6 more)
src/joyfl/: __init__.py  __main__.py  api.py  builtins.py  combinators.py  datatypes.py  errors.py  formatting.py  interpreter.py  library.py  linker.py  loader.py  operators.py  parser.py  runner.py  runtime.py  types.py  validating.py
tests/: errmod.py  error-import.joy  error-linker.joy  error-parser.joy  error-runtime.joy  test_api.py  test_builtins.py  test_cli.py  test_execute.py  test_interpreter.py  test_libraries.py  test_linker.py  test_loader.py  test_modules.py  test_parser.py  test_runtime.py  test_strings.joy  test_structs.joy  test_structs.py  test_typedefs.py  test_types.py
