[build-system]
requires=["uv_build"]
build-backend = "uv_build"

[project]
name = "joyfl"
version = "0.5-dev"
description = "A minimal but elegant dialect of Joy, a functional / concatenative stack language."
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.11"
dependencies = [
    "click",
    "lark",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.scripts]
joyfl = "joyfl.__main__:main"
